# EchoTherm-Daemon

./: .gitignore  CMakeLists.txt  Makefile  README.md  echotherm  echotherm.c  echothermd  echothermd.c  install.sh  uninstall.sh  vscode_Readme.txt
src/: EchoThermCamera.cpp  EchoThermCamera.h  echotherm.cpp  echothermd.cpp
